React-WordPress/scss/elements/_product.scss
/* ... */
.ps-product__thumbnail {
    transition: all 0.5s;
}
.hover-scale{
    transition: all ease 0.3s;
    .hover-show{
        position: relative;
        max-height: 0;
        opacity: 0;
        overflow: hidden;
        transition: all ease 0s;
    }
    .hover-hide{
        position: relative;
        max-height: 100px;
        opacity: 1;
        transition: all ease 0s;
    }
    button.hover-show{
        width: 100%;
        background: #000;
        color: #fff;
        padding: 0.5em;
        border: none;
        font-size: 12px;
        border-radius: 7px;
        transition: all ease 0.4s;
        border: 0.1px solid black;
        &:hover{
            background-color: #fff;
            color: #000000;
        }
       }
    &:hover{
        transform: scale(1.07);
        .hover-hide{
            opacity: 0;
            overflow: hidden;
            max-height:0px;
        }
        .hover-show{
            opacity: 1;
            max-height: 100px;

        }
    }
}
.ps__desc-md{
    transition: all ease 0.5s;
    @include media("<sm"){
        max-height: 70px;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}
.ps__read-more{
    display: none;
    font-weight: 600;
    cursor: pointer;
    @include media("<sm"){
        display: inline;
    }
}
.ps__product-cart {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;

    > * {
        width: 100%;
    }

    .ps-product__thumbnail {
        max-width: 100px;
    }
    .ps__product-content{
        width: 70%;
        margin-left: 15px;
        display: flex;
        justify-content: space-between;
       *{ 
        color: #000;
        font-weight: 600;
        }
        a{
            font-weight: 600;
        }
    }
    @include media('<md'){
        margin-left: 8px;
        .ps__product-content{
            width: 100%;
        }
    }
    @include media("<sm"){
        .ps__product-content{
            display: block;
        }
    }
}
.ps__product-review{
    border-bottom: 1px solid #e0e0e0;
    margin-bottom: 10px;
    padding: 7px 0;
    p{
        margin: 0;
        padding: 0;
    }
    p:first-child{
        font-weight: 600;
        font-size: 17px;
    }
}
.ps__see-all-reviews{
    text-align: center;
    p{
        cursor: pointer;
    }
}
.shafn-centered-sm{
    @include media("<md"){
        text-align: center;
    }
}

.category-link{
    transition: all ease 0.4s;
    text-transform: capitalize;
    &:hover,
    &.active
    {
        color: #ff083a ;
    }
}

